--- a/godlike.styl
+++ b/godlike.styl
@@ -57,7 +57,7 @@ span
     display inline-block
 
 // Remove default styles
-a, input, button, textarea, optgroup, select, fieldset, figure, legend
+a, input, button, textarea, optgroup, select, fieldset, figure, legend, address
     font inherit
     color inherit
     line-height inherit
@@ -143,7 +143,7 @@ ul, ol, menu
     list-style none
 
 // Fix default alignment
-input, select, button, button > *
+input, select, button, button > *, a > *
     display inline-block
     vertical-align middle
 
@@ -153,7 +153,7 @@ button, label, select, [type='button'], [type='submit'], [type='reset'], [type='
     cursor pointer
 
 // Fix appearance in Chrome and Safari
-[type='search'], [type='range'], ::-webkit-search-cancel-button, ::-webkit-search-decoration, ::-webkit-outer-spin-button, ::-webkit-inner-spin-button, ::-webkit-slider-thumb
+[type='search'], [type='range'], [type="radio"] ::-webkit-search-cancel-button, ::-webkit-search-decoration, ::-webkit-outer-spin-button, ::-webkit-inner-spin-button, ::-webkit-slider-thumb
     -webkit-appearance none
 
 ::-webkit-file-upload-button
@@ -165,6 +165,10 @@ button, label, select, [type='button'], [type='submit'], [type='reset'], [type='
     pointer-events none
     position absolute
     right 0
+
+// Fix appearance in Mobile Safari
+[type="radio"]
+    -webkit-appearance radio
 
 // Fix appearance in Firefox
 [type='number']
